--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ environment:
 
 dependencies:
   provider: ^4.0.0
+  http: ^0.12.0+2
   flutter:
     sdk: flutter
 
@@ -29,6 +30,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^2.7.0
 
 dev_dependencies:
   flutter_test:
